# sigma-SCF

./: .codecov.yml  .gitignore  .travis.yml  README.md  setup.py
SuperCoolFast/: SuperCoolFast.py  __init__.py  ao_to_mo.py  init.py  logging.config  run.py  run_sscf.py  scf_params_default.yml  settings.py  test.yml
blas_exercise/: C.data  F.data  Makefile  do_blas_scf.cpp  get_dm.cpp  get_eel.cpp  get_nel.cpp  get_nel.hpp  main.cpp  main.x  read_in_files.cpp  scf.py
blas_exercise/include/: get_dm.hpp  get_eel.hpp  get_nel.hpp  read_in_files.hpp
jk/: CMakeLists.txt  __init__.py  jk.cpp
mp2/: __init__.py  mp2.py
psi4wrapper/: __init__.py  psi4wrapper.py
scf/: SuperCoolFast.py  __init__.py  clean.py  diis_solver.py  hf.py  init.py  oda_utils.py  psi4_wrapper.py  psi4wrapper.py  run.py  scf.py  scf_params_default.yml  scf_utils.py  sscf.py  sscf_utils.py  test.yml
tests/: test_.py  test_df.py  test_df.yml  test_diis.py  test_diis.yml  test_energies.py  test_math.py  test_mp2.py  test_mp2.yml  test_opt.py  test_opt.yml  test_ortho_ao.py  test_ortho_ao.yml  test_psi4wrapper.py  test_rhf.py  test_sscf.py  test_sscf.yml  test_uhf.py  test_uhf.yml  test_xform.py  test_xform.yml
xform/: CMakeLists.txt  __init__.py  check.py  xform.cpp
